--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,9 +5,24 @@ body {
 }
 
 .header {
-  background-color: #252525;;
+  background-color: #252525;
   text-align: center;
   min-height: 100px;
+}
+
+.header h1 {
+	color: white; 
+	font-size: 40px; 
+	margin: 0; 
+	padding-top: 20px; 
+	float: left; 
+	padding-left: 20px; 
+	letter-spacing: 5px; 
+	font-family: 'Oswald', sans-serif;
+}
+
+.search-button {
+	max-width: 300px;
 }
 
 .header form {
@@ -32,6 +47,8 @@ body {
 	text-decoration: none;
 	padding: 16px;
 	letter-spacing: 2px;
+	color: white; 
+	font-size: 13px;
 }
 
 .header input[type=text] {
@@ -65,10 +82,6 @@ body {
 	display: table;
 }
 
-/*#header-logo {
-	max-width: 100%;
-	height: 200px;
-}*/
 
 #navbar {
   	width: 100%;
@@ -76,7 +89,6 @@ body {
   	height: 60px;
   	overflow: hidden;
   	background-color: #0d4e86;
-  	/*padding-top: 20px;*/
 }
 
 #navbar ul {
@@ -109,19 +121,10 @@ body {
 	color: white;
 	text-decoration: none;
 	line-height: 4em;
+	font-size: 13px;
 }
 
 
-
-/*#navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}*/
 
 #navbar ul li a:hover {
 	height: 60px;	
@@ -140,109 +143,9 @@ body {
 	font-weight: bold;
 }
 
-/*#weather-holder {
-	overflow: hidden;
-	width: 50px;
-	height: 50px;
-	left: 0;
-	top: 0;
-	background-color: black;
-}*/
-
-.slideshow-container {
-	max-width: 100%;
-	min-width: 100%;
-	position: relative;
-	margin: auto;
-	z-index: -5;
-	height: 425px;
-	background-color: #252525;
-	margin-bottom: 50px;
+.mySlides {
+	display: none;
 }
-
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-  font-weight: bold;
-}
-
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
-}
-
-
-
-
-
 
 
 
@@ -269,11 +172,10 @@ body {
 	width: 100%;
 	background-color: #0d4e86;
 	color: white;
-	text-align: : center;
+	text-align: center;
 }
 
 .description {
-	/*padding-top: 10px;*/
 	position: relative;
 	width: 100%;
 	text-align: center;
@@ -299,18 +201,18 @@ body {
 .tab {
 	overflow: hidden;
 	border: 1px solid #ccc;
-	background-color: #B0C4DE;
+	background-color: #252525;
 	margin-left: 15px;
 	margin-right: 15px;
 }
 
 .tablinks {
-	color: #022450;
+	color: white;
 }
 
 .tab button {
 	background-color: inherit;
-	color: #022450;
+	color: white;
 	float: left;
 	border: none;
 	outline: :none;
@@ -330,12 +232,27 @@ body {
 	padding-left: 12px;	
 	padding-right: 12px;
 	padding-bottom: 40px;
-	border: 1px solid #ccc;
+	border: 1px solid black;
 	border-top: none;
 	border-bottom-left-radius: 15px;
 	border-bottom-right-radius: 15px;
 	margin-left: 15px;
 	margin-right: 15px;
+}
+
+
+.tabcontent h3 {
+	color: #413939; 
+	font-size: 25px; 
+	margin-left: 50px; 
+	margin-bottom: 8px;
+}
+
+.tabcontent p {
+	color: #413939; 
+	font-size: 15px; 
+	margin-left: 50px; 
+	margin-top: 5px;
 }
 
 
@@ -361,6 +278,21 @@ hr {
 	margin-bottom: 40px;
 }
 
+.announcements h1 {
+	margin-left: 15px; 
+	color: #022450; 
+	font-size: 20px;
+}
+
+.announcements a {
+	margin-top: 15px; 
+	padding-top: 15px; 
+	color: red; 
+	font-size: 15px; 
+	left: 0; 
+	text-decoration: none;
+}
+
 .boards {
 	display: flex;
 	justify-content: center;
@@ -368,7 +300,7 @@ hr {
 }
 
 .tab {
-	border: 1px solid gray;
+	border: 1px solid black;
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
 }
@@ -377,14 +309,42 @@ hr {
 	margin-top: 0; 
 	top: 200px;
 	left: 0;
-	width: 50px;
-	height: 15px;
+	width: 65px;
+	height: 25px;
 	background-color: #0d4e86;
 	padding: 5px;
 	color: white;
+	font-size: 12px;
 	display: inline-block;
 }
 
+#board1 h5 {
+	color: #0d4e86; 
+	font-size: 12px; 
+	padding-left: 7px; 
+	padding-right: 7px;
+}
+
+#board2 h5 {
+	color: #0d4e86; 
+	font-size: 12px; 
+	padding-left: 7px; 
+	padding-right: 7px;
+}
+
+#board3 h5 {
+	color: #0d4e86; 
+	font-size: 12px; 
+	padding-left: 7px; 
+	padding-right: 7px;
+}
+
+#board4 h5 {
+	color: #0d4e86; 
+	font-size: 12px; 
+	padding-left: 7px; 
+	padding-right: 7px;
+}
 
 #board1 {
 	border: 1px solid #736F6F;
@@ -394,6 +354,30 @@ hr {
 	height: 300px;
 	margin-left: 15px;
 	margin-right: 15px;
+}
+
+#board1 img {
+	width: 298px; 
+	height: 200px; 
+	z-index: -15;
+}
+
+#board2 img {
+	width: 298px; 
+	height: 200px; 
+	z-index: -15;
+}
+
+#board3 img {
+	width: 298px; 
+	height: 200px; 
+	z-index: -15;
+}
+
+#board4 img {
+	width: 298px; 
+	height: 200px; 
+	z-index: -15;
 }
 
 #board2 {
@@ -476,25 +460,62 @@ hr {
 	height: 150px;
 	margin-left: 15px;
 	margin-right: 15px;
-	background-color: white;
+	background-color: #3a5477;
 }
 
+#alert1 h5 {
+	color: white; 
+	font-size: 12px; 
+	padding-left: 7px; 
+	padding-right: 7px;
+}
+
+#alert1 span {
+	color: red; 
+	font-size: 10px;
+}
+
+#alert2 span {
+	color: red; 
+	font-size: 10px;
+}
+
+#alert3 span {
+	color: red; 
+	font-size: 10px;
+}
+
+#alert2 h5 {
+	color: white; 
+	font-size: 12px; 
+	padding-left: 7px; 
+	padding-right: 7px;
+}
+
+#alert3 h5 {
+	color: white; 
+	font-size: 12px; 
+	padding-left: 7px; 
+	padding-right: 7px;
+}
 
 
 .date {
 	border-top-left-radius: 10px; 
 	left: 0;
-	width: 50px;
-	height: 15px;
-	background-color: #0d4e86;
+	width: 60px;
+	height: 20px;
+	background-color: #252525;
 	padding: 5px;
 	color: white;
+	font-size: 11px;
 	display: inline-block;
 }
 
 
 
 #alert2 {
+	background-color: #3a5477;
 	border: 2px solid dimgray;
 	border-radius: 15px;
 	display: inline-block;
@@ -503,7 +524,6 @@ hr {
 	height: 150px;
 	margin-left: 15px;
 	margin-right: 15px;
-	background-color: white;
 }
 
 
@@ -516,7 +536,7 @@ hr {
 	height: 150px;
 	margin-left: 15px;
 	margin-right: 15px;
-	background-color: white;
+	background-color: #3a5477;
 }
 
 
@@ -536,11 +556,24 @@ hr {
 	margin-right: auto;
 	border: 2px solid gray;
 	border-radius: 25px;
-	background-color: #D1D8E6;
+	background-color: #252525;
 	padding-top: 15px;
 	width: 300px;
-	height: 125px;
+	height: 150px;
 	box-shadow: 5px 10px 8px #8E8F90;
+}
+
+
+.weather-container p {
+	font-size: 15px; 
+	color: white; 
+	margin-bottom: 5px;
+}
+
+.weather-container h4 {
+	font-size: 15px; 
+	color: white; 
+	margin-top: 0px;
 }
 
 
