--- a/templates/home.html
+++ b/templates/home.html
@@ -187,8 +187,8 @@ function showDivs(n) {
 	}
 </script>
   
-<script async defer
+<!-- <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOeYMvF7kPJ7ZcAjOVWiRA8PjCk5E_TsM&callback=initMap">
-</script>
+</script> -->
         
 {% endblock %}
