--- a/static/css/mainadmin.css
+++ b/static/css/mainadmin.css
@@ -13,7 +13,6 @@ body {
    	margin-bottom: 20px;
    	top: 0;
    	position: fixed;
-   	/*position: absolute;*/
 }
 
 #navbar img {
@@ -24,7 +23,6 @@ body {
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	/*position: fixed;*/
 	right: 0;
 	margin-right: 30px;
 }
@@ -349,21 +347,6 @@ s
 
 
 
-/*
-button {
-	background-color: #0d4e86;
-	height: 60px;
-	width: 225px;
-	color: white;
-	border: 1px solid #b8c7d4;
-	box-shadow: 6px 9px 9px -3px rgba(0,0,0,0.75);
-	border-radius: 10px;
-	
-}
-
-button:hover {
-	opacity: 0.8;
-}*/
 
 .menus {
 	display: flex;
@@ -398,9 +381,6 @@ button {
 }
 
 #customers td, #customers th {
-	/*background-color: white;*/
-
-  /*padding: 8px;*/
   padding-top: 8px;
   padding-bottom: 8px;
   color:  #717476;
@@ -409,7 +389,6 @@ button {
 #customers tr {
 	background-color: white;
 	border-bottom: 1px solid #ddd;
-  	/*border-top: 1px solid #ddd;*/
   	width: 200px;
 }
 
@@ -417,7 +396,6 @@ button {
 	background-color: white;
 }
 
-/*#customers tr:hover {background-color: #ddd;}*/
 
 #customers tr:hover {background-color: #f5f5f5;}
 
@@ -465,7 +443,6 @@ button {
 
 .column {
 	
-	/*border-bottom: 1px solid #e7eaec;*/
 	padding-left: 20px;
 }
 
@@ -490,7 +467,6 @@ button {
 .form-holder {
 	background-color: white; 
 	margin-left: 15%;
-	/*margin-right: 20px;*/
 	margin-top: 20px;
 	border-top: 5px solid #e7eaec;
 	border-bottom: 5px solid #e7eaec;
@@ -499,68 +475,31 @@ button {
 }
 
 
-.add {
+
+.add-form {
+	position: relative;
+	margin-left: 0 auto;
 	display: flex;
-	flex-flow: row wrap;
-	align-items: center;
-	padding-left: 80px;
-	padding-right: 80px;
+	justify-content: center;
+
+}
+
+
+.add-form > div {
+	float: right;
+	margin: 10px;
+}
+
+.form1 {
+
 }
 
 
 
-/*background:gray;*/
-/*border:2px;
-border-radius:5px;
-padding:2px;
-width:80%;
-margin: 20px;*/
-/*margin:auto;*/
-/*margin-top:30px;*/
-/*height:575px;*/
-
-
-/*.add form{
-width: 400px;
-margin: 20px;
-text-align:center;
-border:2px;
-border-radius:3px;
-}*/
-
-/*.add input{
-width:240px;
-text-align:center;
-background:#ecfof1;
-border:2px solid transparent;
-border-radius:3px;
-font-size:16px;
-font-weight:200;
-padding:10px 0;
-transition:border .5s;
-border: 1px solid #e5e6e7;
-}*/
-/*
-.add input[type =submit]{
-border:2px solid transparent;
-background:darkslategray;
-color:white;
-font-size:16px;
-line-height:25px;
-padding:10px 0;
-border-radius:3px;
-}*/
-
 
 .form-holder h2 {
-  /*position: relative;*/
-  /*overflow-y: hidden;*/
- /* display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;*/
   padding-top: 12px;
-  padding-bottom: 12px;
+  padding-bottom: 12=px;
   text-align: left;
   background-color: white;
   color:  #717476;
@@ -570,22 +509,23 @@ border-radius:3px;
   border-bottom: 1px solid #e0e0e0;
 }
 
-.add label {
-  margin: 5px 10px 5px 0;
+form {
+	margin-bottom: 20px;
+}
+
+
+
+.add-form label {
   color: #717476;
   font-size: 15px;
-
-  /*padding-left: 50px;*/
-  /*padding-right: 25px;*/
+  display: inline-block;
 }
 
-/*.add td {
-	margin: 30px;
-}
-*/
-.add input {
-  vertical-align: middle;
+
+.add-form input {
   margin: 5px 10px 5px 20px;
+  margin-bottom: 15px;
+  margin-right: 5px;
   padding: 10px;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -593,32 +533,37 @@ border-radius:3px;
   width: 180px;
 }
 
-.add button {
+.add-form select {
+  margin: 5px 10px 5px 20px;
+  margin-bottom: 15px;
+  margin-right: 5px;
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding-right: 25px;
+  width: 180px;
+}
+
+
+.submit-button {
+	display: flex;
+	justify-content: space-between;
+}
+
+.submit-button button {
+	align-items: center;
   padding: 10px 20px;
   background-color: #1ab394;;
   border: 1px solid #ddd;
   border-radius: 5px;
   color: white;
   cursor: pointer;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 20px;
 }
 
-.add button:hover {
-  /*background-color: royalblue;*/
+.submit-button button:hover {
   opacity: 0.8;
 }
 
-@media (max-width: 800px) {
-  .add input {
-    margin: 10px 0;
-  }
-  
-  .add {
-    flex-direction: column;
-    align-items: stretch;
-  }
-}
-
-/*.add input[type="submit"] {
-	display: block;
-	margin: 0 auto;
-}*/
