--- a/templates/add-user.html
+++ b/templates/add-user.html
@@ -1,30 +1,30 @@
 {% extends "mainadmin-base.html" %}
 {% block content %}
 <div class="content-holder">
-  <div class="title">
-    <h4>USER MANAGEMENT</h4>
-    <span>Home / Users / <b> Update </b></span>
-  </div>
+	<div class="title">
+		<h4>USER MANAGEMENT</h4>
+		<span>Home / Users / <b> Add </b></span>
+	</div>
 
-  <div class="form-holder">
-    <h2>User Information</h2>
-  
+	<div class="form-holder">
+		<h2>User Information</h2>
+	
     <div class="add-form">
-      <form action="{{ url_for('add_user') }}" method="post" xmlns="http://www.w3.org/1999/html">
+  		<form action="{{ url_for('add_user') }}" method="post" xmlns="http://www.w3.org/1999/html">
         <div class="form1">
           <label for="username"><b>Username</b></label>
-          <input type="text" placeholder="{{ username }}" name="username" required>
+          <input type="text" placeholder="Enter username" name="username" required>
             
           <label for="email"><b>Email</b></label>
-          <input type="text" placeholder="{{ email }}" name="email" required>
+          <input type="text" placeholder="Enter email" name="email" required>
         </div>
 
         <div class="form2">
           <label for="first_name"><b>First Name</b></label>
-          <input type="text" placeholder="{{ first_name }}" name="first_name" required>
+          <input type="text" placeholder="Enter first name" name="first_name" required>
              
           <label for="last_name"><b>Last name</b></label>
-          <input type="text" placeholder="{{ last_name }}" name="last_name" required>
+          <input type="text" placeholder="Enter last name" name="last_name" required>
         </div>
 
         <div class="form3">
@@ -48,7 +48,7 @@
         </div>
       </form>
      </div>
-  </div>
+	</div>
 </div>
 
 {% endblock %}
