--- a/templates/add-user.html
+++ b/templates/add-user.html
@@ -30,9 +30,9 @@
         <div class="form3">
           <label for="admin_type"><b>Role</b></label>
           <select>
-            <option name="role" value="Main Admin">Main Admin</option>
-            <option name="role" value="Relief Admin">Relief Admin</option>
-            <option name="role" value="Social Worker Admin">Social Worker Admin</option>
+            <option name="role" value=3>Main Admin</option>
+            <option name="role" value=2>Relief Admin</option>
+            <option name="role" value=1>Social Worker Admin</option>
           </select>
             
           <label for="password"><b>Gender</b></label>
