Added a password generator and sending credentials to email when creating a user

--- a/templates/add-user.html
+++ b/templates/add-user.html
@@ -29,10 +29,10 @@
 
         <div class="form3">
           <label for="admin_type"><b>Role</b></label>
-          <select>
-            <option name="role" value=3>Main Admin</option>
-            <option name="role" value=2>Relief Admin</option>
-            <option name="role" value=1>Social Worker Admin</option>
+          <select name="admin_type">
+            <option value=3>Main Admin</option>
+            <option value=2>Relief Admin</option>
+            <option value=1>Social Worker Admin</option>
           </select>
             
           <label for="password"><b>Gender</b></label>
