--- a/templates/mainadmin-base.html
+++ b/templates/mainadmin-base.html
@@ -35,8 +35,8 @@
 		<div class="dropdown">
 			<a href="/adduser">Add Users</a>
 			<a href="/view-user">View Users</a>
-			<a href="/view-user">Update Users</a>
-			<a href="/view-user">Delete Users</a>
+			<!-- <a href="/view-user">Update Users</a>
+			<a href="/view-user">Delete Users</a> -->
 		</div>
 	</div>
 
