--- a/templates/edit-user.html
+++ b/templates/edit-user.html
@@ -10,7 +10,7 @@
     <h2>User Information</h2>
   
     <div class="add-form">
-      <form action="{{ url_for('add_user') }}" method="post" xmlns="http://www.w3.org/1999/html">
+      <form action="/update/user/{{ public_id }}" method="post" xmlns="http://www.w3.org/1999/html">
         <div class="form1">
           <label for="username"><b>Username</b></label>
           <input type="text" placeholder="{{ username }}" name="username" required>
@@ -29,10 +29,10 @@
 
         <div class="form3">
           <label for="admin_type"><b>Role</b></label>
-          <select>
-            <option name="role" value="Main Admin">Main Admin</option>
-            <option name="role" value="Relief Admin">Relief Admin</option>
-            <option name="role" value="Social Worker Admin">Social Worker Admin</option>
+          <select name="admin_type">
+            <option value=3>Main Admin</option>
+            <option value=2>Relief Admin</option>
+            <option value=1>Social Worker Admin</option>
           </select>
             
           <label for="password"><b>Gender</b></label>
