--- a/templates/edit-user.html
+++ b/templates/edit-user.html
@@ -10,7 +10,7 @@
     <h2>User Information</h2>
   
     <div class="add-form">
-      <form action="{{ url_for('add_user') }}" method="post" xmlns="http://www.w3.org/1999/html">
+      <form action="{{ url_for('update_user', public_id=public_id) }}" method="post" xmlns="http://www.w3.org/1999/html">
         <div class="form1">
           <label for="username"><b>Username</b></label>
           <input type="text" placeholder="{{ username }}" name="username" required>
@@ -27,20 +27,22 @@
           <input type="text" placeholder="{{ last_name }}" name="last_name" required>
         </div>
 
-        <div class="form3">
-          <label for="admin_type"><b>Role</b></label>
-          <select>
-            <option name="role" value="Main Admin">Main Admin</option>
-            <option name="role" value="Relief Admin">Relief Admin</option>
-            <option name="role" value="Social Worker Admin">Social Worker Admin</option>
+         <div class="form3">
+          <label for="role"><b>Role</b></label>
+          <select name="role">
+            <option>Select Role</option>
+            <option value="Main Admin">Main Admin</option>
+            <option value="Relief Admin">Relief Admin</option>
+            <option value="Social Worker Admin">Social Worker Admin</option>
           </select>
             
           <label for="password"><b>Gender</b></label>
-          <select>
-            <option name="gender" value="male">Male</option>
-            <option name="gender" value="female">Female</option>
+          <select name="gender">
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
           </select>
         </div>
+
 
         <div class="submit-button">  
           <button style="background-color: #1ab394;" type="submit">Submit</button>
