--- a/templates/add-user.html
+++ b/templates/add-user.html
@@ -28,17 +28,18 @@
         </div>
 
         <div class="form3">
-          <label for="admin_type"><b>Role</b></label>
-          <select>
-            <option name="role" value="Main Admin">Main Admin</option>
-            <option name="role" value="Relief Admin">Relief Admin</option>
-            <option name="role" value="Social Worker Admin">Social Worker Admin</option>
+          <label for="role"><b>Role</b></label>
+          <select name="role">
+            <option>Select Role</option>
+            <option value="Main Admin">Main Admin</option>
+            <option value="Relief Admin">Relief Admin</option>
+            <option value="Social Worker Admin">Social Worker Admin</option>
           </select>
             
           <label for="password"><b>Gender</b></label>
-          <select>
-            <option name="gender" value="male">Male</option>
-            <option name="gender" value="female">Female</option>
+          <select name="gender">
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
           </select>
         </div>
 
@@ -50,5 +51,6 @@
      </div>
 	</div>
 </div>
+
 
 {% endblock %}
