--- a/templates/mainadmin-base.html
+++ b/templates/mainadmin-base.html
@@ -33,12 +33,13 @@
 		<img src="/static/img/users.png" align="left" />
 		<h1><a href="#">Users > </a></h1>
 		<div class="dropdown">
-			<a href="/adduser">Add Users</a>
+			<a href="/add/user/admin">Add Users</a>
 			<a href="/view-user">View Users</a>
 			<a href="/view-user">Update Users</a>
 			<a href="/view-user">Delete Users</a>
 		</div>
 	</div>
+	
 
 	<div class="messages">
 		<img src="/static/img/messages.png" align="left" />
@@ -57,7 +58,13 @@
 
 	<div class="evacs">
 		<img src="/static/img/evacs.png" align="left" />
-		<h1><a href="#">Evacuation </a></h1>
+		<h1><a href="#">Evacuation > </a></h1>
+		<div class="dropdown">
+			<a href="/view/center">View Center</a>
+			<a href="/add/center">Add Center</a>
+			<a href="/view/center">Update Center</a>
+			<a href="/view/center">Assign Users</a>
+		</div>
 	</div>
 
 	<div class="maps">
