--- a/templates/mainadmin-base.html
+++ b/templates/mainadmin-base.html
@@ -18,7 +18,7 @@
   <ul>
   	<li><div class="logout"><a href="{{ url_for('logout') }}">Log out</a></div></li>
   	<li><img src="/static/img/logout.png" align="right"/></li>
-  	<li><div class="welcome">Welcome, {{ session['username'] }}</div></li>
+  	<li><div class="welcome">Welcome, {{ session['user'] }}</div></li>
 
 </div>
 
