evacuees crud ui

--- a/templates/mainadmin-base.html
+++ b/templates/mainadmin-base.html
@@ -73,6 +73,16 @@
 
 	</div>
 
+	<div class="evacuees">
+		<img src="/static/img/users.png" align="left"/>
+		<h1><a href="#">Evacuees > </a></h1>
+		<div class="dropdown">
+			<a href="/evacuees/add">New Evacuees</a>
+			<a href="/view-evacuees">View Evacuees</a>
+		</div>			
+	</div>
+
+
 	<div class="maps">
 		<img src="/static/img/maps.png" align="left" />
 		<h1><a href="#">Map</a></h1>
