--- a/static/css/mainadmin.css
+++ b/static/css/mainadmin.css
@@ -142,11 +142,9 @@ a {
 	display: block;
 }
 
-
 .evacs:hover .dropdown {
 	display: block;
 }
-
 
 .users h1 a:hover {
 	opacity: 0.8;
@@ -429,7 +427,7 @@ button {
 
 
 .title {
-	height: 100px;
+	height: 120px;
 	width: 100%;
 	border-top: 1px solid #e0e0e0;
 	border-bottom: 1px solid #e0e0e0;
@@ -439,6 +437,156 @@ button {
 	color: #717476;
 	background-color: white;
 }
+
+.title a:hover {
+	color: red;
+}
+
+
+.profile-name {
+	height: 130px;
+	width: 100%;
+	border-top: 1px solid #e0e0e0;
+	border-bottom: 1px solid #e0e0e0;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 20px;
+	color: #717476;
+	background-color: white;
+}
+
+.profile-name h4 {
+	font-size: 25px;
+	/*margin-left: 30px;*/
+}
+
+.profile-name span {
+	color: #818080;
+}
+
+.profile-picture img {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-right: 30px;
+	height: 90px;
+	width: 90px;
+}
+
+.action-icon {
+	top: 3px;
+	font-size: 13px;
+	float: right;
+	/*margin-top: 30px;*/
+	margin-right: 20px;
+	/*margin-top: 0%;*/
+	/*margin-bottom: auto;*/
+	/*top: 30px;*/
+	/*display: inline-block;*/
+	/*margin-top: 30px;*/
+}
+
+
+.action-icon p {
+	display: inline-block;
+}
+
+.action-icon p:hover {
+	color: red;
+}
+
+.action-icon img {
+	width: 20px;
+	height: 25px;
+}
+
+.information-holder {
+	display: inline-block;
+	background-color: white; 
+	margin: 0 10px;
+	width: 500px;
+	/*padding-left: 50px;
+	padding-right: 50px;*/
+	margin-left: 30px;
+	/*margin-right: 550px;*/
+	margin-top: 20px;
+	border-top: 5px solid #e7eaec;
+	border-bottom: 5px solid #e7eaec;
+	/*margin-bottom: 50px;*/
+	padding-bottom: 30px;
+}
+
+.information-holder h4 {
+	color: #717476;
+	font-size: 23px;
+	margin-left: 20px;
+	text-align: center;
+}
+
+.information-holder h5 {
+	color: #717476;
+	font-size: 15px;
+	margin-left: 30px;
+	display: inline-block;
+	/*left: 20px;*/
+	/*font-weight: bold;		*/
+}
+
+.information-holder p {
+	display: inline-block;
+	color: #1f6a9c;
+	margin-left: 10px;
+}
+
+.map-holder {
+	float: right;
+	display: inline-block;
+	background-color: white; 
+	margin: 0 10px;
+	width: 500px;
+	/*margin-left: 550px;*/
+	margin-right: 30px;
+	margin-top: 20px;
+	border-top: 5px solid #e7eaec;
+	border-bottom: 5px solid #e7eaec;
+	/*margin-bottom: 50px;*/
+}
+
+
+.change-picture {
+	float: right;
+	display: inline-block;
+	background-color: white; 
+	margin: 0 10px;
+	width: 500px;
+	/*margin-left: 550px;*/
+	margin-right: 30px;
+	margin-top: 20px;
+	border-top: 5px solid #e7eaec;
+	border-bottom: 5px solid #e7eaec;
+	/*margin-bottom: 50px;*/
+	padding-bottom: 30px;
+}
+
+.change-picture h4 {
+	color: #717476;
+	font-size: 23px;
+	margin-left: 20px;
+	text-align: center;
+}
+
+.change-picture img {
+	float: left;
+	width: 80px;
+	height: 80px;
+	margin-left: 30px;
+}
+
+.change-picture input {
+	margin-left: 30px;
+	margin-top: 25px;
+}
+
+
 
 .title span {
 	font-size: 12px;
@@ -493,7 +641,6 @@ button {
 	float: right;
 	margin: 10px;
 }
-
 
 
 
@@ -567,7 +714,6 @@ form {
 }
 
 
-
 #customers button {
 	background-color: inherit;
 	border: none;
@@ -629,5 +775,4 @@ form {
   text-decoration: none;
   cursor: pointer;
 }
-
 
