--- a/templates/add-evac.html
+++ b/templates/add-evac.html
@@ -7,7 +7,7 @@
 	</div>
 
 	<div class="form-holder">
-		<h2>User Information</h2>
+		<h2>Evacuation Center</h2>
 	
     <div class="add-form">
   		<form action="{{ url_for('add_center') }}" method="post" xmlns="http://www.w3.org/1999/html">
