--- a/templates/mainadmin-base.html
+++ b/templates/mainadmin-base.html
@@ -18,9 +18,7 @@
   <ul>
   	<li><div class="logout"><a href="{{ url_for('logout') }}">Log out</a></div></li>
   	<li><img src="/static/img/logout.png" align="right"/></li>
-
   	<li><div class="welcome">Welcome, {{ session['user'] }}</div></li>
-
 
 </div>
 
@@ -33,17 +31,15 @@
 
 	<div class="users">
 		<img src="/static/img/users.png" align="left" />
-		<h1><a href="#">Users > </a></h1>
+		<h1><a href="#">Users &nbsp  &nbsp  &nbsp &nbsp &nbsp &nbsp > </a></h1>
 		<div class="dropdown">
-
 			<a href="/add/user/admin">Add Users</a>
-
 			<a href="/view-user">View Users</a>
 			<a href="/view-user">Update Users</a>
 			<a href="/view-user">Delete Users</a>
 		</div>
 	</div>
-
+	
 
 	<div class="messages">
 		<img src="/static/img/messages.png" align="left" />
@@ -62,15 +58,13 @@
 
 	<div class="evacs">
 		<img src="/static/img/evacs.png" align="left" />
-
-		<h1><a href="#">Evacuation > </a></h1>
+		<h1><a href="#">Evacuation &nbsp &nbsp > </a></h1>
 		<div class="dropdown">
 			<a href="/view/center">View Center</a>
 			<a href="/add/center">Add Center</a>
 			<a href="/view/center">Update Center</a>
 			<a href="/view/center">Assign Users</a>
 		</div>
-
 	</div>
 
 	<div class="maps">
